# CPP_Priactice

./: CMakeLists.txt  README.md
dailytrial/d221120/: test_basic_type.cpp  test_var_assing_value.cpp
dailytrial/d221120/test_external_var/: external_var.cpp  external_var.h  test_external_var.cpp
dailytrial/d221121/: test_const.cpp  test_pointer.cpp  test_reference.cpp
dailytrial/d221122/: test_constexpr.cpp  test_string.cpp  test_structure.cpp  test_typealias.cpp
